# lupin

./: .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
src/: actor.rs  channel.rs  combinator.rs  functional.rs  lib.rs  numeric.rs  service.rs  stream.rs
src/buffer/: compression.rs  mod.rs
tests/: buffer.rs
