[package]
name = "lupin"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
futures-concurrency = "7.6.3"
futures-lite = "2.6.0"
itertools = "0.14.0"

[features]
default = ["std"]
std = []

[dev-dependencies]
rand = "0.9.2"
tokio = { version = "1.47.0", features = ["rt", "macros", "time", "sync"] }
